2014-01-15  6.8.8-3 Dirk Lemstra <dirk@snakeware...>
  * The -type truecolor option for a grayscale image returns RGB JPEG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24814).

2014-01-10  6.8.8-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-2, SVN revision 14347.

2014-01-09  6.8.8-2 Dirk Lemstra <dirk@snakeware...>
  * Added option 'icon:auto-resize' to automatically store multiple sizes
    in an ico image (requires 256x256 input image).
  * Added text kerning/spacing to Magick++. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=24716).

2013-12-30  6.8.8-2 Cristy  <quetzlzacatenango@image...>
  * The -evaluate-sequence sum returns a proper alpha channel now (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24704).
  * Support OpenJPEG for JPEG-2000 support.
  * Support IsMagickWandInstantiated() method (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=6&t=24724).
  * LevelColorsImageChannel() returns proper status (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24751).
  * Generate a proper SVG clipping path (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24752).
  * Return image moments with the identify -moments -verbose options.
  * Perceptual hash metric for compare utility: -metric PHASH (algorithm
    by Fred Wienhaus).

2013-12-30  6.8.8-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-1, SVN revision 14087.

2013-12-27  6.8.8-1 Cristy  <quetzlzacatenango@image...>
  * Support points argument for draw MSL element.
  * Fix misplaced closing parenthesis for strncmp() call in magick/xml-tree.c.
  * The -page option now correctly sets the image page offset (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24701).

2013-12-26  6.8.8-1 Dirk Lemstra <dirk@snakeware...>