@@ -1,3 +1,7 @@
+2014-01-16  6.8.8-3 Glenn Randers-Pehrson <glennrp@image...>
+  * Added "-define png:swap-bytes" option (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24818).
+
 2014-01-15  6.8.8-3 Dirk Lemstra <dirk@snakeware...>
   * The -type truecolor option for a grayscale image returns RGB JPEG (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24814).
